# real-estate-ai

./: .clinerules  .env.example  .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml  test_chat_api.py  test_chat_sync.py  test_fix.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  auth.py  chat.py  documents.py  legal_data.py  system.py
backend/app/core/: __init__.py  importer.py  legal_data_importer.py  llm.py  rag.py  register_documents.py
backend/app/data/: legal_laws.json
documents/reference/: contract_breach_qa.md  kekchien_kakyuha法律制度.md  kenchukijihou_relengai.md  land_lease_qa.md  lease_rights_qa.md  minpo_reutila_guide.md  rental_troubleshooting_qa.md  sample_lease_agreement.md  sample_leasehold_agreement.md  sample_normal_lease_agreement.md  sample_sale_agreement.md  taikoken_contract_effect_qa.md  taikoken_contract_types.md  taikoken_exam_study_guide.md  taikoken_hourei_shikoukisoku.md  taikoken_hourei_shikourei.md  taikoken_law_overview.md  toshikeikakuhou_relengai.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  MarkdownRenderer.tsx
plans/: embedded-model-integration-plan.md  legal-data-integration-design.md  real-estate-ai-system-design.md
