[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "real-estate-ai"
version = "0.1.0"
description = "不動産法律AIシステム"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # RAG関連
    "qdrant-client>=1.7.0",
    "langchain>=0.1.0",
    "langchain-qdrant>=0.1.0",
    "langchain-community>=0.0.16",
    "langchain-text-splitters>=0.1.0",
    # LLM関連
    "openai>=1.10.0",
    # データベース
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # テキスト処理
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    # その他
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    # 埋め込みモデル
    "langchain-huggingface>=0.0.1",
    "torch>=2.0.0",
    "transformers>=4.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]
